--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ img{
 }
 
 #main{
-    background: linear-gradient(to right, white 10%,rgb(207, 207, 207) 90%);
+    background: linear-gradient(to right, white 10%,rgb(194, 194, 194) 90%);
     background-size: 300% 300%;
     animation: colors 20s ease infinite;
 }
@@ -73,27 +73,35 @@ img{
 
 h1{
     font:32px 'UnbRegular', sans-serif;
-    padding: 200px 0 0 200px;
+    padding: 0px 0 0 215px;
 }
 
 
 .texto{
     font:22px 'OpenRegular', sans-serif;
     letter-spacing: 1.5px;
-    padding: 20px 750px 0 150px;
+    padding: 20px 120px 0 150px;
     text-align: center;
 }
 
 .conteudo{
-    padding-bottom: 200px;
+    padding-bottom: 138px;
+    display: flex;
+    padding-top: 200px;
 }
 
 button{
     border-radius: 5px;
     padding: 10px 25px;
-    background-color: blue;
+    background-color: #004AAD;
     font:18px 'OpenRegular', sans-serif;
     color: white;
-    margin: 30px 0 0 345px;
+    margin: 30px 0 0 368px;
     cursor: pointer;
+}
+
+.equipe img{
+    width: 500px;
+    margin-right: 100px;
+    margin-top: -60px;
 }
