--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ h1{
     padding-top: 200px;
 }
 
-button{
+.conteudo button{
     border-radius: 5px;
     padding: 10px 25px;
     background-color: #004AAD;
@@ -104,4 +104,78 @@ button{
     width: 500px;
     margin-right: 100px;
     margin-top: -60px;
+}
+
+#body2{
+    background-color: #004AAD;
+}
+
+.app{
+    background-color: white;
+    width: 90%;
+    max-width: 600px;
+    margin: 100px auto 60px;
+    border-radius: 10px;
+    padding: 30px;
+}
+
+.app h1{
+    padding: 0;
+    color: #002a61;
+    border-bottom: 1px solid #333;
+    padding-bottom: 30px;
+}
+
+.quiz h2{
+    font: 500 22px 'OpenBold', sans-serif;
+    color: #000000;
+    padding-bottom: 18px;
+}
+
+.quiz{
+    padding: 20px 0;
+}
+
+.btn{
+    background: #fff;
+    color: #222;
+    font: 500 20px 'OpenRegular', sans-serif;
+    width: 100%;
+    border: 1px solid #222;
+    padding: 10px;
+    margin: 10px 0;
+    text-align: left;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.btn:hover:not([disabled]){
+    background: #002b63;
+    color: #fff;
+}
+
+.btn:disabled{
+    cursor: no-drop;
+}
+
+#next-btn{
+    background: #002b63;
+    color: white;
+    font: 500 20px 'OpenRegular', sans-serif;
+    width: 150px;
+    border: 0;
+    padding: 10px;
+    margin: 20px auto 0;
+    border-radius: 4px;
+    cursor: pointer;
+    display: none;
+}
+
+.correto{
+    background: #9aeabc;
+}
+
+.incorreto{
+    background: #ff9393;
 }
