--- a/style.css
+++ b/style.css
@@ -186,9 +186,12 @@ h1{
     margin-top: 10px;
 }
 
-.final{
-    background-color: white;
+.comeco{
+    background-color: #ffffff;
+    /* color: white; */
     width: 100%;
+    position: fixed;
+    padding: 0; 
 }
 
 #pontuacao{
@@ -196,3 +199,13 @@ h1{
     text-align: center;
     padding: 20px 0;
 }
+
+#segundoMain{
+    padding-top: 80px;
+    padding-bottom: 60px;
+}
+
+.fa-solid{
+    padding-right: 5px;
+}
+
