--- a/style.css
+++ b/style.css
@@ -187,11 +187,12 @@ h1{
 }
 
 .comeco{
-    background-color: #ffffff;
+    background-color: #f9f9f9;
     /* color: white; */
     width: 100%;
     position: fixed;
-    padding: 0; 
+    padding: 0;
+    box-shadow: 2px 3px 2px 2px rgba(0, 0, 0, 0.433);
 }
 
 #pontuacao{
